welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:16: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsDogHouse'
	override def run() {
                     ^